Fix nav width and add complete navigation structure
- Reverted max-width from 1400px back to 1248px to fix nav items spreading too wide
- Added all secondary nav items and popular links from original site:
  - Parks & recreation: 7 secondary + 8 popular links
  - Nature: 7 secondary + 5 popular links
  - Get involved: 8 secondary + 5 popular links
  - Our work: 10 secondary + 7 popular links

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -33,8 +33,8 @@ header nav {
 
 @media (width >= 900px) {
   header nav {
-    padding-left: max(24px, calc((100% - 1400px) / 2));
-    padding-right: max(24px, calc((100% - 1400px) / 2));
+    padding-left: max(24px, calc((100% - 1248px) / 2));
+    padding-right: max(24px, calc((100% - 1248px) / 2));
   }
 }
 
